--- a/index.html
+++ b/index.html
@@ -6,58 +6,81 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha256-l85OmPOjvil/SOvVt3HnSSjzF1TUMyT9eV0c2BzEGzU=" crossorigin="anonymous" />
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 
 <body>
-    <div class="table">
-        <div class="price-card">
-            <h1 class="price-card__title">Basic Website</h1>
-            <div class="price-card__price">99€</div>
-            <ul class="price-card__options-list">
-                <p class="price-card__description">Simple website made in the world's most popular CMS system, Wordpress.</p>
-                <li class="price-card__options-list__item">Website in WordPress</li>
-                <li class="price-card__options-list__item">3 sub pages</li>
-                <li class="price-card__options-list__item">Theme customized</li>
-                <li class="price-card__options-list__item">Help and guidance</li>
-                <li class="price-card__options-list__item">System introduction</li>
-                <li class="price-card__options-list__item">2 weeks free support</li>
-                <button class="price-card__order-btn">ORDER NOW</button>
-            </ul>
-        </div>
+
+    <div class="price-card basic">
+        <h1 class="price-card__title">Basic
+            <p>Website</p>
+        </h1>
+        <div class="price-card__price">99€</div>
+        <div class="price-card__description">Simple website made in the world's most popular CMS system, Wordpress.</div>
+        <ul class="price-card__options-list">
+            <li class="price-card__options-list__item">
+                <div class="marker basic-img"></div>Website in WordPress</li>
+            <li class="price-card__options-list__item">
+                <div class="marker basic-img"></div>3 sub pages</li>
+            <li class="price-card__options-list__item">
+                <div class="marker basic-img"></div>Theme customized</li>
+            <li class="price-card__options-list__item">
+                <div class="marker basic-img"></div>Help and guidance</li>
+            <li class="price-card__options-list__item">
+                <div class="marker basic-img"></div>System introduction</li>
+            <li class="price-card__options-list__item">
+                <div class="marker basic-img"></div>2 weeks free support</li>
+        </ul>
+        <div class="price-card__order"><button class="price-card__order-btn btn-basic">ORDER NOW</button></div>
     </div>
-    <div class="table">
-        <div class="price-card">
-            <h1 class="price-card__title">Business Website</h1>
-            <div class="price-card__price">299€</div>
-            <ul class="price-card__options-list">
-                <p class="price-card__description">Advanced website made in the world's most popular CMS system, Wordpress.</p>
-                <li class="price-card__options-list__item">Website in WordPress</li>
-                <li class="price-card__options-list__item">3-5 sub pages</li>
-                <li class="price-card__options-list__item">Theme customized</li>
-                <li class="price-card__options-list__item">Help and guidance</li>
-                <li class="price-card__options-list__item">System introduction</li>
-                <li class="price-card__options-list__item">1 month free support</li>
-                <button class="price-card__order-btn">ORDER NOW</button>
-            </ul>
-        </div>
+
+    <div class="price-card business">
+        <h1 class="price-card__title">Business
+            <p>Website</p>
+        </h1>
+        <div class="price-card__price">299€</div>
+        <div class="price-card__description">Advanced website made in the world's most popular CMS system, Wordpress.</div>
+        <ul class="price-card__options-list">
+            <li class="price-card__options-list__item">
+                <div class="marker business-img"></div>Website in WordPress</li>
+            <li class="price-card__options-list__item">
+                <div class="marker business-img"></div>3-5 sub pages</li>
+            <li class="price-card__options-list__item">
+                <div class="marker business-img"></div>Theme customized</li>
+            <li class="price-card__options-list__item">
+                <div class="marker business-img"></div>Help and guidance</li>
+            <li class="price-card__options-list__item">
+                <div class="marker business-img"></div>System introduction</li>
+            <li class="price-card__options-list__item">
+                <div class="marker business-img"></div>1 month free support</li>
+        </ul>
+        <div class="price-card__order"><button class="price-card__order-btn btn-business">ORDER NOW</button></div>
     </div>
-    <div class="table">
-        <div class="price-card">
-            <h1 class="price-card__title">Webshop Website</h1>
-            <div class="price-card__price">599€</div>
-            <ul class="price-card__options-list">
-                <p class="price-card__description">Your very own webshop made the world's most popular CMS system, Wordpress.</p>
-                <li class="price-card__options-list__item">Webshop in WordPress</li>
-                <li class="price-card__options-list__item">3-5 sub pages</li>
-                <li class="price-card__options-list__item">Theme customized</li>
-                <li class="price-card__options-list__item">Help and guidance</li>
-                <li class="price-card__options-list__item">System introduction</li>
-                <li class="price-card__options-list__item">1 month free support</li>
-                <button class="price-card__order-btn">ORDER NOW</button>
-            </ul>
-        </div>
+
+    <div class="price-card webshop">
+        <h1 class="price-card__title">Webshop
+            <p>Website</p>
+        </h1>
+        <div class="price-card__price">599€</div>
+        <div class="price-card__description">Your very own webshop made the world's most popular CMS system, Wordpress.</div>
+        <ul class="price-card__options-list">
+            <li class="price-card__options-list__item">
+                <div class="marker webshop-img"></div>Webshop in WordPress</li>
+            <li class="price-card__options-list__item">
+                <div class="marker webshop-img"></div>3-5 sub pages</li>
+            <li class="price-card__options-list__item">
+                <div class="marker webshop-img"></div>Theme customized</li>
+            <li class="price-card__options-list__item">
+                <div class="marker webshop-img"></div>Help and guidance</li>
+            <li class="price-card__options-list__item">
+                <div class="marker webshop-img"></div>System introduction</li>
+            <li class="price-card__options-list__item">
+                <div class="marker webshop-img"></div>1 month free support</li>
+        </ul>
+        <div class="price-card__order"><button class="price-card__order-btn btn-webshop">ORDER NOW</button></div>
     </div>
+
 </body>
 
 </html>
