--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 
 <body>
 
-    <div class="price-card basic">
+    <div class="price-card">
         <h1 class="price-card__title">Basic
             <p>Website</p>
         </h1>
-        <div class="price-card__price">99€</div>
+        <div class="price-card__price basic-price">99€</div>
         <div class="price-card__description">Simple website made in the world's most popular CMS system, Wordpress.</div>
         <ul class="price-card__options-list">
             <li class="price-card__options-list__item">
@@ -35,11 +35,11 @@
         <div class="price-card__order"><button class="price-card__order-btn btn-basic">ORDER NOW</button></div>
     </div>
 
-    <div class="price-card business">
+    <div class="price-card">
         <h1 class="price-card__title">Business
             <p>Website</p>
         </h1>
-        <div class="price-card__price">299€</div>
+        <div class="price-card__price business-price">299€</div>
         <div class="price-card__description">Advanced website made in the world's most popular CMS system, Wordpress.</div>
         <ul class="price-card__options-list">
             <li class="price-card__options-list__item">
@@ -58,11 +58,11 @@
         <div class="price-card__order"><button class="price-card__order-btn btn-business">ORDER NOW</button></div>
     </div>
 
-    <div class="price-card webshop">
+    <div class="price-card">
         <h1 class="price-card__title">Webshop
             <p>Website</p>
         </h1>
-        <div class="price-card__price">599€</div>
+        <div class="price-card__price webshop-price">599€</div>
         <div class="price-card__description">Your very own webshop made the world's most popular CMS system, Wordpress.</div>
         <ul class="price-card__options-list">
             <li class="price-card__options-list__item">
